--- a/styles.css
+++ b/styles.css
@@ -35,19 +35,22 @@ li a:hover:not(.active) {
 }
 /* Layout Code */
 .container {
-  margin: 0 auto;
+    margin: 0 auto;
   min-height: 100vh;
   max-width: 1000px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+   border-radius: 25px;
+
 }
 .header {
+margin: 5% 0 0 0;
   display: flex;
-  height: 100px;
-  padding: 0 20px;
+  height: 80px;
+  padding: 1px 30% 1px 30%;
   align-items: center;
-  background: lightpink;
+  background: #96DED1;
+ 
 }
 .content {
   flex: 1;
@@ -64,6 +67,7 @@ li a:hover:not(.active) {
   background: #ECFFDC;
 }
 .footer {
+margin: 0 0 5% 0;
   display: flex;
   height: 50px;
   align-items: center;
