--- a/styles.css
+++ b/styles.css
@@ -1,100 +1,145 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font: 100%/1.5 "Noto Sans JP", sans-serif;
-  background: lavender;
-}
-/*Navbar*/
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #731975;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  
-}
-
-li a:hover:not(.active) {
-  background-color: #151515;
-}
-
-.active {
-  background-color: #008080;
-}
-/* Layout Code */
-.container {
-    margin: 0 auto;
-  min-height: 100vh;
-  max-width: 1000px;
+  width: 100%;
+  height: 100%;
+  font-family: "Ubuntu", Arial, sans-serif;
   display: flex;
   flex-direction: column;
-   border-radius: 25px;
-
-}
-.header {
-margin: 5% 0 0 0;
-  display: flex;
-  height: 80px;
-  padding: 1px 30% 1px 30%;
-  align-items: center;
-  background: #96DED1;
- 
-}
-.content {
-  flex: 1;
-  display: flex;
-}
-.main {
-  flex: 1;
-  padding: 0 20px;
-  background: snow;
-}
-.aside {
-  width: 260px;
-  padding: 0 20px;
-  background: #ECFFDC;
-}
-.footer {
-margin: 0 0 5% 0;
-  display: flex;
-  height: 50px;
-  align-items: center;
   justify-content: center;
-  background: lightsteelblue;
-}
-
-/* Content Code */
-.header h1 {
-  margin: 0;
-  font-size: 1.75rem;
-  text-transform: uppercase;
   align-items: center;
-  background: #96DED1;
+  background: radial-gradient(
+    circle,
+    rgba(239, 241, 173, 1) 3%,
+    rgba(160, 195, 237, 1) 100%
+  );
+}
 
+.title {
+  margin: 30px 0;
+  padding: 0;
+  color: #4c6067;
+  font-size: 36px;
+  line-height: 36px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  text-rendering: optimizeLegibility;
 }
-.main h2,
-.aside h3 {
-  font-size: 1.5rem;
-  margin: 1.5rem 0;
 
+.container {
+  width: 100%;
+  min-height: 270px;
+  max-width: 800px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: rgba(33, 35, 38, 0.1) 0 10px 10px -10px;
 }
-.main p,
-.aside p {
-  margin: 0.75rem 0;
+
+.container__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-rows: repeat(1, minmax(min-content, max-content));
+  grid-template-columns: repeat(5, minmax(min-content, max-content));
+  grid-auto-rows: minmax(min-content, max-content);
+  grid-auto-columns: minmax(min-content, max-content);
+  justify-content: space-around;
+  gap: 10px 20px;
 }
-.aside,
-.footer {
-  font-size: 0.875rem;
+
+.container__item {
+  width: 100px;
+  color: #4c6067;
+  min-height: 30px;
+  border-radius: 3px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  cursor: pointer;
+  position: relative;
+  font-size: 16px;
+  line-height: 16px;
+  letter-spacing: 1px;
+  font-weight: 400;
+  transition: 0.2s;
+}
+
+.container__item::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 40%;
+  margin: 0 30%;
+  bottom: 0;
+  border-bottom: 1px solid #4c6067;
+}
+
+.container__item_active {
+  background: #4c6067;
+  box-sizing: border-box;
+  color: #ebfaff;
+  font-weight: 300;
+}
+
+.container__link {
+  margin: 0;
+  padding: 0;
+}
+
+.container__inner {
+  width: 80%;
+  margin: 45px auto 35px;
+}
+
+.content__subtitle {
+  animation-name: smoothTop;
+  animation-duration: 0.3s;
+  font-size: 22px;
+  line-height: 22px;
+  font-weight: 500;
+  color: #404648;
+}
+
+.content__description {
+  animation-name: smoothBottom;
+  animation-duration: 0.7s;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 300;
+  color: #404648;
+}
+
+.container__inner_hidden {
+  display: none;
+}
+
+@keyframes smoothTop {
+  0% {
+    opacity: 0.2;
+    transform: translateY(7%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes smoothBottom {
+  0% {
+    opacity: 0.2;
+    transform: translateY(-3%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
 }
