--- a/styles.css
+++ b/styles.css
@@ -1,130 +1,67 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
+@import url('https://fonts.googleapis.com/css?family=Arimo:400,700&display=swap');
+body{
+  background:#CDDC39;
+  font-family: 'Arimo', sans-serif;
 }
-
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  font-family: "Ubuntu", Arial, sans-serif;
-  display: flex;
+h2{
+  color:#000;
+  text-align:center;
+  font-size:2em;
+  padding-top:20px;
+}
+.warpper{
+  display:flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  background: radial-gradient(
-    circle,
-    rgba(239, 241, 173, 1) 3%,
-    rgba(160, 195, 237, 1) 100%
-  );
 }
-
-.title {
-  margin: 30px 0;
-  padding: 0;
-  color: #4c6067;
-  font-size: 36px;
-  line-height: 36px;
-  letter-spacing: 1px;
-  font-weight: 700;
-  text-rendering: optimizeLegibility;
-}
-
-.container {
-  width: 100%;
-  min-height: 270px;
-  max-width: 800px;
-  background: #fff;
-  border-radius: 10px;
-  padding: 20px;
-  box-sizing: border-box;
-  box-shadow: rgba(33, 35, 38, 0.1) 0 10px 10px -10px;
-}
-.container__item {
-  width: 300px;
-  color: #4c6067;
-  min-height: 30px;
-  border-radius: 3px;
-  display: grid;
-  justify-content: center;
-  align-content: center;
+.tab{
   cursor: pointer;
-  position: relative;
-  font-size: 16px;
-  line-height: 16px;
-  letter-spacing: 1px;
-  font-weight: 400;
+  padding:10px 20px;
+  margin:0px 2px;
+  background:#000;
+  display:inline-block;
+  color:#fff;
+  border-radius:3px 3px 0px 0px;
+  box-shadow: 0 0.5rem 0.8rem #00000080;
 }
-
-.container__item::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 40%;
-  margin: 0 30%;
-  bottom: 0;
-  border-bottom: 1px solid #4c6067;
+.panels{
+  background:#fffffff6;
+  box-shadow: 0 2rem 2rem #00000080;
+  min-height:200px;
+  width:100%;
+  max-width:470px;
+  border-radius:3px;
+  overflow:hidden;
+  padding:20px;  
 }
-
-.container__item_active {
-  background: #4c6067;
-  box-sizing: border-box;
-  color: #ebfaff;
-  font-weight: 300;
+.panel{
+  display:none;
+  animation: fadein .8s;
 }
-
-.container__link {
-  margin: 0;
-  padding: 0;
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
 }
-
-.container__inner {
-  width: 80%;
-  margin: 45px auto 35px;
+.panel-title{
+  font-size:1.5em;
+  font-weight:bold
 }
-
-.content__subtitle {
-  animation-name: smoothTop;
-  animation-duration: 0.3s;
-  font-size: 22px;
-  line-height: 22px;
-  font-weight: 500;
-  color: #404648;
+.radio{
+  display:none;
 }
-
-.content__description {
-  animation-name: smoothBottom;
-  animation-duration: 0.7s;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 300;
-  color: #404648;
+#one:checked ~ .panels #one-panel,
+#two:checked ~ .panels #two-panel,
+#three:checked ~ .panels #three-panel{
+  display:block
 }
-
-.container__inner_hidden {
-  display: none;
-}
-
-@keyframes smoothTop {
-  0% {
-    opacity: 0.2;
-    transform: translateY(7%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-}
-
-@keyframes smoothBottom {
-  0% {
-    opacity: 0.2;
-    transform: translateY(-3%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0%);
-  }
+#one:checked ~ .tabs #one-tab,
+#two:checked ~ .tabs #two-tab,
+#three:checked ~ .tabs #three-tab{
+  background:#fffffff6;
+  color:#000;
+  border-top: 3px solid #000;
 }
