--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,9 @@ h2{
   box-shadow: 0 0.5rem 0.8rem #00000080;
 }
 .panels{
-  background:#fffffff6;
+background-color: #D9AFD9;
+background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+
   box-shadow: 0 2rem 2rem #00000080;
   min-height:200px;
   width:100%;
