--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ h2{
   box-shadow: 0 0.5rem 0.8rem #00000080;
 }
 .panels{
-background-color: #D9AFD9;
-background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+background-color: #85FFBD;
+background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
 
   box-shadow: 0 2rem 2rem #00000080;
   min-height:200px;
