--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,14 @@ background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
   font-family: 'Arimo', sans-serif;
 }
 h2{
-  color:#000;
   text-align:center;
   font-size:2em;
-  padding-top:20px;
+}
+h1{
+  color:rgb(155, 37, 37);
+  text-align:center;
+  font-size:3em;
+
 }
 .warpper{
   display:flex;
@@ -36,7 +40,7 @@ background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
   max-width:640px;
   border-radius:5px;
   overflow:hidden;
-  padding:20px;  
+  padding:20px;
   line-height:1;
 }
 .panel{
